# cargo-target-scanner

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  cli.rs  i18n.rs  main.rs  model.rs  scanner.rs  utils.rs
src/ui/: mod.rs  panels.rs  project_list.rs  styles.rs
