[package]
name = "cargo-target-scanner"
version = "0.1.2"
edition = "2024"
authors = ["romchung"]
description = "A desktop GUI tool to scan, visualize, and clean up Rust project target directories"
license = "MIT"
repository = "https://github.com/TtTRz/cargo-target-scanner"
keywords = ["cargo", "target", "cleanup", "disk-space", "gui"]
categories = ["development-tools", "filesystem"]

[dependencies]
clap = { version = "4", features = ["derive"] }
dioxus = { version = "0.7", features = ["desktop"] }
dirs = "6"
tokio = { version = "1", features = ["time"] }
rfd = "0.15"
